# api

./: .gitignore  OLD_indexapi_v2.py  README.md  ccc_v1.hf  coci_v1.hf  coci_v2.hf  croci_v1.hf  doci_v1.hf  doci_v2.hf  index_v1.hf  index_v2.hf  indexapi.py  indexapi_v1.py  indexapi_v2.py  meta_v1.hf  metaapi.py  noci_v1.hf  occ_v1.hf  occapi.py  poci_v1.hf  pyproject.toml  pyproject.toml.bak  v1.hf  wikidata_v1.hf  wikidataapi.py
.github/workflows/: run_tests.yml
test/: blazegraph.properties  data.nq  data.nt  index_v1.hf  meta_v1_test.hf  start_test_db.ps1  start_test_db.sh  stop_test_db.ps1  stop_test_db.sh  test_api.py  test_cociapi_v2.py  test_indexapi_v2.py  test_metaapi.py  test_metaapi_v1.py
test/coverage/: .coverage
