[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "arcangelo7", email = "arcangelo.massari@unibo.it"}
]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ramose>=1.0.8",
    "sparqlwrapper>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "virtuoso-utilities>=1.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html"
pythonpath = "."

[tool.coverage.run]
source = [
    "ccc_addon",
    "indexapi_v1",
    "indexapi_v2",
    "metaapi",
    "occapi",
    "publishers",
    "wikidataapi",
]
